--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo-google-fonts/dev": "^0.2.0",
+    "@react-native-community/datetimepicker": "3.5.2",
+    "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~42.0.1",
     "expo-app-loading": "1.1.2",
     "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
@@ -27,8 +30,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
-    "@react-native-community/datetimepicker": "3.5.2",
-    "expo-image-picker": "~10.2.2"
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
