--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0"
+    "react-native-reanimated": "~2.2.0",
+    "lottie-react-native": "4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
