--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-web": "~0.13.12",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
-    "lottie-react-native": "4.0.2"
+    "lottie-react-native": "4.0.2",
+    "expo-secure-store": "~10.2.0",
+    "expo-constants": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
