--- a/package.json
+++ b/package.json
@@ -16,25 +16,24 @@
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~42.0.1",
     "expo-app-loading": "1.1.2",
+    "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "lottie-react-native": "4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.18.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "lottie-react-native": "4.0.2",
-    "expo-secure-store": "~10.2.0",
-    "expo-constants": "~11.0.1"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
