use expo core to init firebase

--- a/app.json
+++ b/app.json
@@ -13,9 +13,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -26,7 +24,19 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "config": {
+        "firebase": {
+          "apiKey": "AIzaSyAtpBOcrFSu6eaYZyJSW8Kgdj7bA_dCzec",
+          "authDomain": "wavedance-220ab.firebaseapp.com",
+          "databaseURL": "https://wavedance-220ab-default-rtdb.firebaseio.com",
+          "projectId": "wavedance-220ab",
+          "storageBucket": "wavedance-220ab.appspot.com",
+          "messagingSenderId": "44744827788",
+          "appId": "1:44744827788:web:9b5b8be651deb086e0aca9",
+          "measurementId": "G-BHE483SC59"
+        }
+      }
     }
   }
 }
