--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@expo-google-fonts/dev": "^0.2.0",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-navigation/drawer": "^5.12.9",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~42.0.1",
     "expo-app-loading": "1.1.2",
     "expo-constants": "~11.0.1",
+    "expo-firebase-core": "~3.1.0",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
@@ -34,7 +36,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
-    "expo-firebase-core": "~3.1.0"
+    "react-query": "^3.33.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -50,7 +52,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
     "typescript": "~4.0.0"
