--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
-    "react-query": "^3.33.1"
+    "react-query": "^3.33.1",
+    "expo-secure-store": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
