--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-firebase-core": "~3.1.0",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
+    "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "lottie-react-native": "4.0.2",
@@ -37,7 +38,7 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "react-query": "^3.33.1",
-    "expo-secure-store": "~10.2.0"
+    "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
