open links to Spotify Artist, EDM Train Event

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "react-query": "^3.33.1",
-    "rn-placeholder": "^3.0.3"
+    "rn-placeholder": "^3.0.3",
+    "expo-web-browser": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
