--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-web": "~0.13.12",
     "react-query": "^3.33.1",
     "rn-placeholder": "^3.0.3",
-    "expo-web-browser": "~9.2.0"
+    "expo-web-browser": "~9.2.0",
+    "expo-haptics": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
