--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "expo-constants": "~11.0.1",
     "expo-firebase-core": "~3.1.0",
     "expo-font": "~9.2.1",
+    "expo-haptics": "~10.1.0",
     "expo-image-picker": "~10.2.2",
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
+    "expo-web-browser": "~9.2.0",
     "firebase": "8.2.3",
     "lottie-react-native": "4.0.2",
     "react": "16.13.1",
@@ -38,10 +40,9 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.15.0",
     "react-query": "^3.33.1",
-    "rn-placeholder": "^3.0.3",
-    "expo-web-browser": "~9.2.0",
-    "expo-haptics": "~10.1.0"
+    "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
