--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.15.0",
     "react-query": "^3.33.1",
-    "rn-placeholder": "^3.0.3"
+    "rn-placeholder": "^3.0.3",
+    "expo-auth-session": "~3.3.1",
+    "expo-random": "~11.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
