--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~42.0.1",
     "expo-app-loading": "1.1.2",
+    "expo-auth-session": "~3.3.1",
     "expo-constants": "~11.0.1",
     "expo-firebase-core": "~3.1.0",
     "expo-font": "~9.2.1",
     "expo-haptics": "~10.1.0",
     "expo-image-picker": "~10.2.2",
+    "expo-random": "~11.2.0",
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
@@ -43,8 +45,7 @@
     "react-native-webview": "^11.15.0",
     "react-query": "^3.33.1",
     "rn-placeholder": "^3.0.3",
-    "expo-auth-session": "~3.3.1",
-    "expo-random": "~11.2.0"
+    "spotify-web-api-js": "^1.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
