--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lottie-react-native": "4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.22.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.10.2",
