--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.13.12",
     "react-query": "^3.33.1",
     "rn-placeholder": "^3.0.3",
